ros2_ws/log/build_2023-12-25_02-52-41/my_first_robot/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/genozen/Desktop/ros2_ws/install/my_first_robot/lib/python3.10/site-packages/my_first_robot/my_first_robot_driver.py", line 180
    if (x_cmd != 0) & (y_cmd != 0) & (r_cmd != 0)
                                                 ^
SyntaxError: expected ':'

